[package]
name = "wba-solana-prereqs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

[dependencies]
bs58 = "0.5.1"
borsh = "1.5.3"
solana-sdk = "2.1.4"
solana-client = "2.1.4"
wasm-bindgen = "0.2.96"
solana-program = "2.1.4"
solana-idlgen = { git = "https://github.com/deanmlittle/solana-idlgen.git" }